--- a/feburary/14th.md
+++ b/feburary/14th.md
@@ -32,3 +32,32 @@ class Acronym
   end
 end
 ```
+
+To create a new line in markdown, use double space at the end of the line.
+
+To highlight a block of code or text, use triple backticks before and after the block or text.
+
+You can add comments in your code using the # symbol.
+
+To access the first character of a string in Ruby, use the index 0.
+
+To iterate over an array in Ruby, use the .each method.
+
+
+## to test if true or false
+To test if something is false one time and then the whole thing is false for the rest of the function, you can use a flag variable to keep track of whether the condition has been false at least once.
+
+```ruby
+def check_array(array)
+  flag = true
+  for element in array do
+    if !element
+      flag = false
+    end
+    if flag == false
+      break
+    end
+  end
+  return flag
+end
+```
