--- a/feburary/13th.md
+++ b/feburary/13th.md
@@ -1,4 +1,4 @@
-# Data Structures and Algorithms for ruby 
+# Some Data Structures for ruby 
 
 Sure! I'd be happy to help you learn about data structures and algorithms in Ruby, starting with arrays.
 
