--- a/feburary/14th.md
+++ b/feburary/14th.md
@@ -61,3 +61,29 @@ def check_array(array)
   return flag
 end
 ```
+
+Some of the things that I learning when solving the isogram is 
+
+the .gsub(/[^a-z]/, '') method it removes all the non-alphabetic characters
+
+```ruby
+class Isogram
+  def self.isogram?(input)
+    input = input.downcase.gsub(/[^a-z]/, '') # remove non-alphabetic characters and convert to lowercase
+    input.chars == input.chars.uniq # if the unique characters of the string are the same as the original characters, it is an isogram
+  end
+end
+```
+
+This implementation first removes any non-alphabetic characters and converts the input string to lowercase. Then it checks whether the unique characters in the resulting string are the same as the original characters. If they are, the string is an isogram, otherwise it's not.
+
+`input.chars` and `input.chars.uniq.`
+
+`input.chars` converts the input string to an array of its characters. For example, if input is the string "isogram", `input.chars` would return the array `["i", "s", "o", "g", "r", "a", "m"]`.
+
+input.chars.uniq returns a new array with only the unique elements from the `input.chars` array. So in the case of "isogram", input.chars.uniq would return `["i", "s", "o", "g", "r", "a", "m"]` because there are no duplicate characters.
+
+By comparing these two arrays with `==`, we're checking if they are equal. If they are equal, it means that there are no duplicate characters in the original input string, which satisfies the definition of an isogram. If they are not equal, it means that there is at least one character that appears more than once in the original input string, which means it's not an isogram.
+
+
+
