--- a/feburary/14th.md
+++ b/feburary/14th.md
@@ -64,7 +64,7 @@ end
 
 Some of the things that I learning when solving the isogram is 
 
-the .gsub(/[^a-z]/, '') method it removes all the non-alphabetic characters
+the `.gsub(/[^a-z]/, '')` method it removes all the non-alphabetic characters
 
 ```ruby
 class Isogram
