--- a/feburary/14th.md
+++ b/feburary/14th.md
@@ -83,7 +83,7 @@ This implementation first removes any non-alphabetic characters and converts the
 
 input.chars.uniq returns a new array with only the unique elements from the `input.chars` array. So in the case of "isogram", input.chars.uniq would return `["i", "s", "o", "g", "r", "a", "m"]` because there are no duplicate characters.
 
-By comparing these two arrays with ==`, we're checking if they are equal. If they are equal, it means that there are no duplicate characters in the original input string, which satisfies the definition of an isogram. If they are not equal, it means that there is at least one character that appears more than once in the original input string, which means it's not an isogram.
+By comparing these two arrays with `==`, we're checking if they are equal. If they are equal, it means that there are no duplicate characters in the original input string, which satisfies the definition of an isogram. If they are not equal, it means that there is at least one character that appears more than once in the original input string, which means it's not an isogram.
 
 
 
