--- a/feburary/14th.md
+++ b/feburary/14th.md
@@ -86,4 +86,16 @@ input.chars.uniq returns a new array with only the unique elements from the `inp
 By comparing these two arrays with `==`, we're checking if they are equal. If they are equal, it means that there are no duplicate characters in the original input string, which satisfies the definition of an isogram. If they are not equal, it means that there is at least one character that appears more than once in the original input string, which means it's not an isogram.
 
 
+## blocks 
 
+```ruby 
+a = [0,1,2,3,4]
+# odd only 
+a.select {|x| x.odd?}
+
+# or 
+
+a.filter do |num|
+  num.odd?
+end
+```
