--- a/feburary/14th.md
+++ b/feburary/14th.md
@@ -117,4 +117,7 @@ contact_list.each { |contact| puts contact[:name] }
 
 contact_list.map { |contact| contact[:name] }
 # => ["marcus", "james", "jake"]
+
+contact_list.map { |contact| contact[:name] }.filter { |name| name[:m] }
+# => ["marcus]
 ```
