--- a/feburary/14th.md
+++ b/feburary/14th.md
@@ -98,6 +98,9 @@ a.select {|x| x.odd?}
 a.filter do |num|
   num.odd?
 end
+
+a.filter(&:odd?)
+# => [1,3]
 ```
 
 learing how to use blocks on rails
